--- a/.github/workflows/deploy-azure-functions.yml
+++ b/.github/workflows/deploy-azure-functions.yml
@@ -3,7 +3,7 @@ name: Azure Functions Python CI/CD
 on:
   push:
     branches:
-      - main  # Change if your branch is different
+      - main
   workflow_dispatch:
 
 jobs:
